@@ -3,12 +3,14 @@ package io.kestra.executor.handler;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
-import io.kestra.core.utils.TestsUtils;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import io.kestra.core.exceptions.InternalException;
+import io.kestra.core.killswitch.EvaluationType;
+import io.kestra.core.killswitch.KillSwitchService;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.LoopExecutionEvent;
 import io.kestra.core.models.executions.LoopRun;
@@ -21,12 +23,19 @@ import io.kestra.core.repositories.ExecutionRepositoryInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
 import io.kestra.core.services.TaskOutputService;
 import io.kestra.core.utils.IdUtils;
+import io.kestra.core.utils.TestsUtils;
+import io.kestra.executor.ExecutorContext;
 import io.kestra.plugin.core.flow.Loop;
 import io.kestra.plugin.core.log.Log;
 
+import io.micronaut.test.annotation.MockBean;
+import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.inject.Inject;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @MicronautTest
 class LoopExecutionEventMessageHandlerTest {
@@ -41,6 +50,19 @@ class LoopExecutionEventMessageHandlerTest {
 
     @Inject
     private TaskOutputService taskOutputService;
+
+    @Inject
+    KillSwitchService killSwitchService;
+
+    @MockBean(KillSwitchService.class)
+    KillSwitchService killSwitchService() {
+        return mock(KillSwitchService.class);
+    }
+
+    @BeforeEach
+    void setUp() {
+        when(killSwitchService.evaluate(anyString())).thenReturn(EvaluationType.PASS);
+    }
 
     @Test
     void shouldReturnEmptyForNonExistingExecution() {
@@ -65,14 +87,16 @@ class LoopExecutionEventMessageHandlerTest {
         var loopTaskRun = loopTaskRun(loopTaskRunId, execution);
         executionRepository.save(execution.withTaskRunList(List.of(loopTaskRun)));
         // terminatedIteration + 1 = 3 == iterationCount = 3 → terminates with SUCCESS
-        taskOutputService.saveOutputs(loopTaskRun, Map.of(
-            Loop.ITERATION_COUNT_OUTPUT, 3,
-            Loop.RUNNING_ITERATIONS_OUTPUT, 1,
-            Loop.TERMINATED_ITERATIONS_OUTPUT, 2
-        ));
+        taskOutputService.saveOutputs(
+            loopTaskRun, Map.of(
+                Loop.ITERATION_COUNT_OUTPUT, 3,
+                Loop.RUNNING_ITERATIONS_OUTPUT, 1,
+                Loop.TERMINATED_ITERATIONS_OUTPUT, Map.of("SUCCESS", 2)
+            )
+        );
 
         // When
-        var loopRun = new LoopRun(execution, "loop", loopTaskRunId,  2, null, "c", null);
+        var loopRun = new LoopRun(execution, "loop", loopTaskRunId, 2, null, "c", null);
         var message = new LoopExecutionEvent(loopRun, execution.getId(), State.Type.SUCCESS, null);
         var maybeExecutor = handler.handle(message);
 
@@ -80,6 +104,8 @@ class LoopExecutionEventMessageHandlerTest {
         assertThat(maybeExecutor).isPresent();
         var taskRun = maybeExecutor.get().getExecution().findTaskRunByTaskRunId(loopTaskRunId);
         assertThat(taskRun.getState().getCurrent()).isEqualTo(State.Type.SUCCESS);
+        assertThat(taskOutputService.getOutputs(loopTaskRun))
+            .containsEntry(Loop.TERMINATED_ITERATIONS_OUTPUT, Map.of("SUCCESS", 3));
     }
 
     @Test
@@ -111,11 +137,13 @@ class LoopExecutionEventMessageHandlerTest {
         var loopTaskRun = loopTaskRun(loopTaskRunId, execution);
         executionRepository.save(execution.withTaskRunList(List.of(loopTaskRun)));
         // terminatedIteration + 1 = 1 < iterationCount = 3 → emit next, handler returns null
-        taskOutputService.saveOutputs(loopTaskRun, Map.of(
-            Loop.ITERATION_COUNT_OUTPUT, 3,
-            Loop.RUNNING_ITERATIONS_OUTPUT, 1,
-            Loop.TERMINATED_ITERATIONS_OUTPUT, 0
-        ));
+        taskOutputService.saveOutputs(
+            loopTaskRun, Map.of(
+                Loop.ITERATION_COUNT_OUTPUT, 3,
+                Loop.RUNNING_ITERATIONS_OUTPUT, 1,
+                Loop.TERMINATED_ITERATIONS_OUTPUT, Collections.emptyMap()
+            )
+        );
 
         // When
         var loopRun = new LoopRun(execution, "loop", loopTaskRunId, 0, null, "a", null);
@@ -126,13 +154,77 @@ class LoopExecutionEventMessageHandlerTest {
         assertThat(maybeExecutor).isEmpty();
     }
 
+    @Test
+    void shouldAccumulateTerminatedIterationsPerStateWhenTransmitFailedIsDisabled() throws InternalException {
+        // Given — transmitFailed disabled: a failing iteration is counted per-state instead of
+        // immediately terminating the loop
+        var flow = flowRepository.create(GenericFlow.of(loopFlow(false)));
+        var execution = Execution.newExecution(flow, Collections.emptyList());
+        String loopTaskRunId = IdUtils.create();
+        var loopTaskRun = loopTaskRun(loopTaskRunId, execution);
+        executionRepository.save(execution.withTaskRunList(List.of(loopTaskRun)));
+        // one iteration already succeeded
+        taskOutputService.saveOutputs(
+            loopTaskRun, Map.of(
+                Loop.ITERATION_COUNT_OUTPUT, 3,
+                Loop.RUNNING_ITERATIONS_OUTPUT, 1,
+                Loop.TERMINATED_ITERATIONS_OUTPUT, Map.of("SUCCESS", 1)
+            )
+        );
+
+        // When — the second iteration fails
+        var loopRun = new LoopRun(execution, "loop", loopTaskRunId, 1, null, "b", null);
+        var message = new LoopExecutionEvent(loopRun, execution.getId(), State.Type.FAILED, null);
+        var maybeExecutor = handler.handle(message);
+
+        // Then — the loop keeps running (emits the last iteration) and records both terminal states
+        assertThat(maybeExecutor).isEmpty();
+        assertThat(taskOutputService.getOutputs(loopTaskRun))
+            .containsEntry(Loop.TERMINATED_ITERATIONS_OUTPUT, Map.of("SUCCESS", 1, "FAILED", 1));
+    }
+
+    @Test
+    void shouldReturnEmptyWhenSubExecutionKillSwitched() {
+        // Given — sub execution is kill-switched
+        var execution = Execution.newExecution(loopFlow(), Collections.emptyList());
+        var loopRun = new LoopRun(execution, "loop", "taskrun", 0, null, "a", null);
+        var message = new LoopExecutionEvent(loopRun, "sub-exec-1", State.Type.SUCCESS, null);
+        when(killSwitchService.evaluate("sub-exec-1")).thenReturn(EvaluationType.IGNORE);
+
+        // When
+        Optional<ExecutorContext> result = handler.handle(message);
+
+        // Then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void shouldReturnEmptyWhenParentExecutionKillSwitched() {
+        // Given — sub execution passes but parent is kill-switched
+        var execution = Execution.newExecution(loopFlow(), Collections.emptyList());
+        var loopRun = new LoopRun(execution, "loop", "taskrun", 0, null, "a", null);
+        var message = new LoopExecutionEvent(loopRun, "sub-exec-1", State.Type.SUCCESS, null);
+        when(killSwitchService.evaluate(execution.getId())).thenReturn(EvaluationType.IGNORE);
+
+        // When
+        Optional<ExecutorContext> result = handler.handle(message);
+
+        // Then
+        assertThat(result).isEmpty();
+    }
+
     private Flow loopFlow() {
+        return loopFlow(true);
+    }
+
+    private Flow loopFlow(boolean transmitFailed) {
         var logTask = Log.builder().id("log").type(Log.class.getName()).message("Hello").build();
         var loopTask = Loop.builder()
             .id("loop")
             .type(Loop.class.getName())
             .values(List.of("a", "b", "c"))
             .tasks(List.of(logTask))
+            .transmitFailed(transmitFailed)
             .build();
         return Flow.builder()
             .tenantId(TestsUtils.randomTenant(this.getClass().getSimpleName()))
@@ -151,11 +243,13 @@ class LoopExecutionEventMessageHandlerTest {
             .flowId(execution.getFlowId())
             .taskId("loop")
             .state(new State().withState(State.Type.RUNNING))
-            .attempts(List.of(
-                TaskRunAttempt.builder()
-                    .state(new State().withState(State.Type.RUNNING))
-                    .build()
-            ))
+            .attempts(
+                List.of(
+                    TaskRunAttempt.builder()
+                        .state(new State().withState(State.Type.RUNNING))
+                        .build()
+                )
+            )
             .build();
     }
 }
